--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,13 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "darkaonline/l5-swagger": "5.6.*",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "5.7.*",
-        "laravel/tinker": "^1.0"
+        "laravel/framework": "5.6.*",
+        "laravel/tinker": "^1.0",
+        "zircote/swagger-php": "2.*"
     },
     "require-dev": {
-        "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
