--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
+        "prettus/l5-repository": "^2.6",
         "zircote/swagger-php": "2.*"
     },
     "require-dev": {
