--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "vue-template-compiler": "^2.6.7"
     },
     "dependencies": {
+        "codeceptjs": "^2.0.6",
+        "nightmare": "^3.0.1",
         "vue-router": "^3.0.2",
         "vue-sweetalert2": "^1.6.4",
         "vuetify": "^1.5.2"
